--- a/authform/index.html
+++ b/authform/index.html
@@ -22,10 +22,10 @@
         </div>
         <form action="" method="post" class="popup-form">
             <label for="email" class="form-label">Эл.почта</label>
-            <input id="mail" name="mail" type="email" class="form-input" required placeholder=" ">
+            <input id="mail" name="mail" type="email" class="form-input" required placeholder="Электронная почта">
             <span></span>
             <label for="user-password" class="form-label">Пароль</label>
-            <input id="user-password" name="user-password" type="password" class="form-input" required placeholder=" ">
+            <input id="user-password" name="user-password" type="password" class="form-input" required placeholder="Пароль">
             <div class="button-container">
                 <button class="button-enter" type="submit">Войти</button>
                 <button class="button-forgot" type="button">Забыли пароль?</button>
